# widestring-rs

./: .clog.toml  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  appveyor.yml
.github/workflows/: rust.yml
debug_metadata/: widestring.natvis
src/: error.rs  iter.rs  lib.rs  macros.rs  u16cstring.rs  u16string.rs  u32cstring.rs  u32string.rs  ucstr.rs  ucstring.rs  ustr.rs  ustring.rs  utfstr.rs  utfstring.rs  widecstring.rs  wideosstring.rs  widestring.rs
src/ffi/: mod.rs  u16cstring.rs  u16string.rs  widecstring.rs  widestring.rs
src/platform/: mod.rs  other.rs  windows.rs
src/ustr/: iter.rs
src/utfstr/: iter.rs
