[package]
name = "widestring"
version = "0.4.3"
authors = ["Kathryn Long <squeeself@gmail.com>"]
description = "A wide string FFI library for converting to and from wide strings, such as those often used in Windows API or other FFI libraries. Both UTF-16 and UTF-32 types are provided."
repository = "https://github.com/starkat99/widestring-rs"
readme = "README.md"
keywords = ["wide", "string", "win32", "utf-16", "utf-32"]
categories = ["text-processing", "encoding"]
license = "MIT OR Apache-2.0"
exclude = [".git*"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[badges]
maintenance = { status = "passively-maintained" }

[dev-dependencies]
winapi = { version = "0.3", features = ["winbase"] }
